resources/css/style.css
body {
	display: flex;
	flex-direction: column;
	background-color: black;
	font-family: Helvetica;
	font-size: 22px;
	opacity: 0.9;
	position: relative;
	margin: 0px; /*NOTE 1*/
}
header {
	display: flex;
	position: fixed;
	background-color: black;
	height: 69px;
	width: 100%;
	border-bottom: 1px solid seashell;
	align-items: center;
}
#logobox { /*NOTE 2*/
	display: flex;
	flex-grow: 1;
}
#tea-cozy-logo {
	height: 50px;
	padding: 9.5px 10px;
}
.nav {
	padding: 0px 8px;
}
.text {
	color: seashell;
}

/*Master Container*/
#master-container {
	display: flex;
	margin-top: 70px;
	flex-direction: column;
	width: 1200px;
	justify-content: center;
}
#top-container {
	background-image: url(../images/img-mission-background.jpg);
	display: inherit;
	width: inherit;
	height: 700px;
}
#middle-container {
	display: inherit;
	width: 1000px;
	justify-content: center;
}
.headliner {
	justify-content: center;
}
#bottom-container {
	background-image: url(../images/img-locations-background.jpg);
	display: inherit;
	width: inherit;
	height: 500px;
}
#contacts-container {
	display: inherit;
	height: 200px;
}
#copyright-container {
}

/*testing properties*/
.blocky{
	border: 1px solid white;
}
.test {
	color: white;


/*
NOTE 1: remove gaps around screen
NOTE 2: properly arrange header items;
*/

